// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.pms.contracts.service;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/refobjects/ref_objects.proto";

service SweepingOutputService {
  rpc resolve(SweepingOutputResolveBlobRequest) returns (SweepingOutputResolveBlobResponse);
  rpc resolveOptional(SweepingOutputResolveBlobRequest) returns (OptionalSweepingOutputResolveBlobResponse);
  rpc consume(SweepingOutputConsumeBlobRequest) returns (SweepingOutputConsumeBlobResponse);
}

message SweepingOutputResolveBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  io.harness.pms.contracts.refobjects.RefObject refObject = 2;
}

message SweepingOutputResolveBlobResponse {
  string stepTransput = 1;
}

message OptionalSweepingOutputResolveBlobResponse {
  bool found = 1;
  string stepTransput = 2;
}
message SweepingOutputConsumeBlobRequest {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  string name = 2;
  string groupName = 3;
  string value = 4;
}

message SweepingOutputConsumeBlobResponse {
  string response = 1;
}
